--- a/app-config.yaml
+++ b/app-config.yaml
@@ -64,9 +64,15 @@ techdocs:
 
 auth:
   # see https://backstage.io/docs/auth/ to learn about auth providers
+  environment: development
   providers:
-    # See https://backstage.io/docs/auth/guest/provider
-    guest: {}
+    github:
+      development:
+        clientId: ${ GITHUB_APP_CLIENT_ID }
+        clientSecret: ${ GITHUB_APP_CLIENT_SECRET }
+        signIn:
+          resolvers:
+            - resolver: usernameMatchingUserEntityName
 
 scaffolder:
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
