--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@backstage-community/plugin-bazaar": "^0.2.28",
     "@backstage/app-defaults": "^1.5.8",
     "@backstage/catalog-model": "^1.5.0",
     "@backstage/cli": "^0.26.11",
