--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -32,6 +32,7 @@
     "@backstage/plugin-org": "^0.6.27",
     "@backstage/plugin-permission-react": "^0.4.24",
     "@backstage/plugin-scaffolder": "^1.23.0",
+    "@backstage/plugin-scaffolder-backend-module-github": "^0.4.0",
     "@backstage/plugin-search": "^1.4.14",
     "@backstage/plugin-search-react": "^1.7.13",
     "@backstage/plugin-techdocs": "^1.10.7",
